Fixed clipping of bottom row when event tab was present.

--- a/BBapp/static/calendar_assets/style.css
+++ b/BBapp/static/calendar_assets/style.css
@@ -23,7 +23,7 @@ username {
   transform: translate3d(0, 0, 0);
   width: 630px;
   margin: 0 auto;
-  height: 570px;
+  height: 645px;
   overflow: hidden;
 }
 
